WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215892
Occasional crashes when restoring replaced text under Editor::changeBackToReplacedString
https://bugs.webkit.org/show_bug.cgi?id=215892
Summary
Occasional crashes when restoring replaced text under Editor::changeBackToRep...
Wenson Hsieh
Reported
2020-08-27 09:38:24 PDT
<
rdar://problem/67731156
>
Attachments
Patch
(8.48 KB, patch)
2020-08-27 09:51 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-27 09:51:04 PDT
Created
attachment 407414
[details]
Patch
EWS
Comment 2
2020-08-27 11:56:44 PDT
Committed
r266248
: <
https://trac.webkit.org/changeset/266248
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407414
[details]
.
Darin Adler
Comment 3
2020-08-27 16:04:52 PDT
Thanks; presumably I caused this regression. Sorry!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug