Cherry-pick r266248. rdar://problem/67963534

Occasional crashes when restoring replaced text under Editor::changeBackToReplacedString
    https://bugs.webkit.org/show_bug.cgi?id=215892
    <rdar://problem/67731156>

    Reviewed by Tim Horton.

    Source/WebCore:

    While reverting the replaced string in `Editor::changeBackToReplacedString`, it's possible for text replacement
    (`Editor::replaceSelectionWithText`) to cause the text checking paragraph range to become orphaned (if for no
    reason other than the fact that arbitrary script can run in between). If this happens, then our attempts to
    expand the checking range to paragraph boundaries underneath `TextCheckingParagraph::paragraphRange` will result
    in a null dereference, since the boundary points computed underneath the `expandToParagraphBoundary` helper will
    be `nullopt`.

    Mitigate this (and any other potentially similar crashes) by making `expandToParagraphBoundary` robust in the
    case where expanding to the start and end fails, and just fall back to returning the original text checking
    range instead.

    Test: editing/mac/input/change-back-to-replaced-string.html

    * editing/Editor.h:
    * editing/TextCheckingHelper.cpp:
    (WebCore::expandToParagraphBoundary):

    See above for more details.

    * testing/Internals.cpp:
    (WebCore::Internals::changeBackToReplacedString):
    * testing/Internals.h:
    * testing/Internals.idl:

    Add a simple internal testing hook to change the currently selected text back to the given replaced string.

    LayoutTests:

    Add a layout test to exercise the crash.

    * editing/mac/input/change-back-to-replaced-string-expected.txt: Added.
    * editing/mac/input/change-back-to-replaced-string.html: Added.

    Canonical link: https://commits.webkit.org/228700@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266248 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/227865.104@safari-610.1.28.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.28.1-branch@266305 268f45cc-cd09-0410-ab3c-d52691b4dbfc